# tagger

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
src/: db.rs  main.rs  models.rs  spotify.rs
templates/: index.html  playback_fragment.html
